Enable PregelProcessorTest on all JDKs